Added "about me" information to index.html

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>The title of "Most interesting man in the world" was already taken aparently. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Los Angeles. Winnetka more specifically. I live in Virginia
+      </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Filmmaking (tho that one hardly counts because it's also my job), Rock climbing, watching science videos, trying new beers, Factorio.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Run a software company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>^^</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Ever since I was 10 or so, I've imagined what I could make computers do if I could write software. Later I realized I also like to constantly be solving difficult problems. Seems like a match made in heaven.</p>
     </section>
 
     <footer id="footer">
